--- a/src/components/Partials/Search/SearchResult.scss
+++ b/src/components/Partials/Search/SearchResult.scss
@@ -31,21 +31,28 @@
         .infoArticle{
             display: grid;
             grid-template-columns: repeat(6, 1fr);
-            gap: 4%;
             padding-bottom: 1%;
             border-bottom: 1px solid #20202020;
             p{
+                color: $secondaryColor;
+                font-size: 1.2rem;
                 text-align: left;
-                margin-left: 35%;
+                margin-left: 40%;
                 padding-bottom: 1%;
                 &:first-of-type{
                     margin-left: 2%;
                 }
-                &:nth-of-type(2){
+                &:nth-of-type(2) {
                     margin-left: 30%;
                 }
+                &:nth-of-type(3) {
+                    margin-left: 35%;
+                }
                 &:last-of-type{
-                    margin-left: 40%;
+                    margin-left: 50%;
+                }
+                &:hover{
+                    color: $highlightTwo;
                 }
             }
         }
